#248 Migrated deprecated methods